[package]
name = "steel-stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["secrets"] }
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"